--- a/BurachiribuARQuizApp/Base.lproj/Main.storyboard
+++ b/BurachiribuARQuizApp/Base.lproj/Main.storyboard
@@ -21,10 +21,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                             </arscnView>
                             <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7CC-6G-yuq" userLabel="SlideView">
-                                <rect key="frame" x="51" y="100" width="666" height="874"/>
+                                <rect key="frame" x="50" y="99" width="668" height="876"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pzj-Da-DNx">
-                                        <rect key="frame" x="0.0" y="0.0" width="666" height="874"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="668" height="876"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -49,15 +49,16 @@
                         <constraints>
                             <constraint firstItem="Wbi-Jd-sog" firstAttribute="top" secondItem="6Ws-CA-VbI" secondAttribute="top" id="0at-Mw-QnI"/>
                             <constraint firstItem="gCo-QA-pCh" firstAttribute="leading" secondItem="6Ws-CA-VbI" secondAttribute="leading" id="1sI-PO-r8K"/>
+                            <constraint firstItem="7CC-6G-yuq" firstAttribute="leading" secondItem="6Ws-CA-VbI" secondAttribute="leading" constant="50" id="2ve-Mn-U2W"/>
+                            <constraint firstItem="6Ws-CA-VbI" firstAttribute="trailing" secondItem="7CC-6G-yuq" secondAttribute="trailing" constant="50" id="3r2-4i-8yk"/>
                             <constraint firstItem="Wbi-Jd-sog" firstAttribute="leading" secondItem="6Ws-CA-VbI" secondAttribute="leading" id="DXO-gO-P1U"/>
                             <constraint firstAttribute="bottom" secondItem="Wbi-Jd-sog" secondAttribute="bottom" id="Eao-rC-3wO"/>
                             <constraint firstItem="7CC-6G-yuq" firstAttribute="centerX" secondItem="gxf-hu-sAn" secondAttribute="centerX" id="KEL-LF-8hm"/>
                             <constraint firstAttribute="bottom" secondItem="gCo-QA-pCh" secondAttribute="bottom" id="OGV-71-BNZ"/>
                             <constraint firstAttribute="trailing" secondItem="gCo-QA-pCh" secondAttribute="trailing" id="Tyh-AN-YoQ"/>
-                            <constraint firstItem="7CC-6G-yuq" firstAttribute="top" secondItem="6Ws-CA-VbI" secondAttribute="top" constant="50" id="Yue-H7-HdN"/>
                             <constraint firstItem="gCo-QA-pCh" firstAttribute="top" secondItem="gxf-hu-sAn" secondAttribute="top" id="cHL-VG-7dr"/>
                             <constraint firstAttribute="trailing" secondItem="Wbi-Jd-sog" secondAttribute="trailing" id="m4O-Kk-4Rs"/>
-                            <constraint firstAttribute="bottom" secondItem="7CC-6G-yuq" secondAttribute="bottom" constant="50" id="o6k-AN-z0X"/>
+                            <constraint firstItem="7CC-6G-yuq" firstAttribute="centerY" secondItem="6Ws-CA-VbI" secondAttribute="centerY" id="oRk-hy-Use"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="sSe-ti-VYB" appends="YES" id="qmS-iw-29f"/>
@@ -78,6 +79,7 @@
                         <outlet property="slide" destination="pzj-Da-DNx" id="k4t-Ub-dGQ"/>
                         <segue destination="BV1-FR-VrT" kind="show" identifier="toQ1" id="xWf-OT-RrW"/>
                         <segue destination="tet-d9-1v2" kind="show" identifier="toResult" id="Wbd-h4-44W"/>
+                        <segue destination="AD7-zb-4XL" kind="show" identifier="toQ1" id="Aal-wm-lVk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZpT-f3-lyS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -93,6 +95,111 @@
                 </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-453.23741007194246" y="25.899280575539571"/>
+        </scene>
+        <!--Quiz View Controller1-->
+        <scene sceneID="nJn-ca-Akc">
+            <objects>
+                <viewController id="AD7-zb-4XL" customClass="QuizViewController1" customModule="BurachiribuARQuizApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gur-Kc-pwV">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vvv-lZ-tYF">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                            </arscnView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kbn-1G-uOC">
+                                <rect key="frame" x="230.5" y="358.5" width="307" height="307"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Kbn-1G-uOC" secondAttribute="height" multiplier="1:1" id="6Un-pW-fAi"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Geg-vO-1bW">
+                                <rect key="frame" x="19" y="430" width="730" height="164"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Geg-vO-1bW" secondAttribute="height" multiplier="182:41" id="A1V-hL-wvC"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="kRU-bG-1hz">
+                                <rect key="frame" x="0.0" y="824" width="768" height="432"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="kRU-bG-1hz" secondAttribute="height" multiplier="16:9" id="1kV-4B-Kk3"/>
+                                </constraints>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBb-FQ-PmP">
+                                <rect key="frame" x="0.0" y="824" width="768" height="200"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="news10UI.png" translatesAutoresizingMaskIntoConstraints="NO" id="8eX-Qd-r8y">
+                                        <rect key="frame" x="0.0" y="0.0" width="768" height="200"/>
+                                    </imageView>
+                                    <button opaque="NO" alpha="0.0" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBB-6a-fIv">
+                                        <rect key="frame" x="61.5" y="87" width="307" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                    </button>
+                                    <button opaque="NO" alpha="0.0" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OET-IT-wpl">
+                                        <rect key="frame" x="399.5" y="87" width="307" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                    </button>
+                                    <button opaque="NO" alpha="0.0" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Scr-tU-Sva">
+                                        <rect key="frame" x="61.5" y="143" width="307" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                    </button>
+                                    <button opaque="NO" alpha="0.0" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iBL-YX-jdw">
+                                        <rect key="frame" x="399.5" y="143" width="307" height="50"/>
+                                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="OET-IT-wpl" firstAttribute="height" secondItem="uBb-FQ-PmP" secondAttribute="height" multiplier="0.25" id="1Ig-LB-5h6"/>
+                                    <constraint firstItem="8eX-Qd-r8y" firstAttribute="leading" secondItem="uBb-FQ-PmP" secondAttribute="leading" id="3sg-15-5pQ"/>
+                                    <constraint firstAttribute="width" secondItem="uBb-FQ-PmP" secondAttribute="height" multiplier="96:25" id="4Hr-tF-dFN"/>
+                                    <constraint firstItem="Scr-tU-Sva" firstAttribute="centerX" secondItem="uBb-FQ-PmP" secondAttribute="centerX" multiplier="0.56" id="6Ht-Ky-ck0"/>
+                                    <constraint firstItem="Scr-tU-Sva" firstAttribute="centerY" secondItem="uBb-FQ-PmP" secondAttribute="centerY" multiplier="1.68" id="CmN-z8-wGz"/>
+                                    <constraint firstItem="Scr-tU-Sva" firstAttribute="width" secondItem="uBb-FQ-PmP" secondAttribute="width" multiplier="0.4" id="Drv-5r-Rto"/>
+                                    <constraint firstItem="OET-IT-wpl" firstAttribute="width" secondItem="uBb-FQ-PmP" secondAttribute="width" multiplier="0.4" id="Gny-NG-SUe"/>
+                                    <constraint firstItem="UBB-6a-fIv" firstAttribute="width" secondItem="uBb-FQ-PmP" secondAttribute="width" multiplier="0.4" id="P4F-Go-BBX"/>
+                                    <constraint firstItem="UBB-6a-fIv" firstAttribute="centerY" secondItem="uBb-FQ-PmP" secondAttribute="centerY" multiplier="1.12" id="SEj-VW-tAi"/>
+                                    <constraint firstItem="iBL-YX-jdw" firstAttribute="width" secondItem="uBb-FQ-PmP" secondAttribute="width" multiplier="0.4" id="XCn-ay-APb"/>
+                                    <constraint firstItem="iBL-YX-jdw" firstAttribute="height" secondItem="uBb-FQ-PmP" secondAttribute="height" multiplier="0.25" id="d40-vq-z1T"/>
+                                    <constraint firstItem="UBB-6a-fIv" firstAttribute="centerX" secondItem="uBb-FQ-PmP" secondAttribute="centerX" multiplier="0.56" id="esY-Ej-spX"/>
+                                    <constraint firstItem="OET-IT-wpl" firstAttribute="centerY" secondItem="uBb-FQ-PmP" secondAttribute="centerY" multiplier="1.12" id="fln-VY-Jx3"/>
+                                    <constraint firstItem="OET-IT-wpl" firstAttribute="centerX" secondItem="uBb-FQ-PmP" secondAttribute="centerX" multiplier="1.44" id="j2h-zw-XaL"/>
+                                    <constraint firstItem="iBL-YX-jdw" firstAttribute="centerY" secondItem="uBb-FQ-PmP" secondAttribute="centerY" multiplier="1.68" id="jng-No-jr7"/>
+                                    <constraint firstItem="Scr-tU-Sva" firstAttribute="height" secondItem="uBb-FQ-PmP" secondAttribute="height" multiplier="0.25" id="job-5f-YAq"/>
+                                    <constraint firstItem="iBL-YX-jdw" firstAttribute="centerX" secondItem="uBb-FQ-PmP" secondAttribute="centerX" multiplier="1.44" id="o1B-zh-jxR"/>
+                                    <constraint firstItem="UBB-6a-fIv" firstAttribute="height" secondItem="uBb-FQ-PmP" secondAttribute="height" multiplier="0.25" id="uUR-WP-dIm"/>
+                                    <constraint firstAttribute="trailing" secondItem="8eX-Qd-r8y" secondAttribute="trailing" id="vSS-Wz-Pip"/>
+                                    <constraint firstItem="8eX-Qd-r8y" firstAttribute="top" secondItem="uBb-FQ-PmP" secondAttribute="top" id="yTM-Bz-ieh"/>
+                                    <constraint firstAttribute="bottom" secondItem="8eX-Qd-r8y" secondAttribute="bottom" id="yfr-Dc-NRf"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TWo-cj-KkG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Kbn-1G-uOC" firstAttribute="width" secondItem="vvv-lZ-tYF" secondAttribute="width" multiplier="0.4" id="8KM-mq-dko"/>
+                            <constraint firstItem="Geg-vO-1bW" firstAttribute="centerX" secondItem="gur-Kc-pwV" secondAttribute="centerX" id="FcG-w6-hCr"/>
+                            <constraint firstItem="TWo-cj-KkG" firstAttribute="bottom" secondItem="uBb-FQ-PmP" secondAttribute="bottom" id="Fnm-lb-XPD"/>
+                            <constraint firstItem="uBb-FQ-PmP" firstAttribute="leading" secondItem="TWo-cj-KkG" secondAttribute="leading" id="J9q-9v-rh7"/>
+                            <constraint firstItem="vvv-lZ-tYF" firstAttribute="bottom" secondItem="gur-Kc-pwV" secondAttribute="bottom" id="ORe-wR-GZ1"/>
+                            <constraint firstItem="vvv-lZ-tYF" firstAttribute="leading" secondItem="TWo-cj-KkG" secondAttribute="leading" id="QiX-QG-cUy"/>
+                            <constraint firstItem="Geg-vO-1bW" firstAttribute="centerY" secondItem="gur-Kc-pwV" secondAttribute="centerY" id="Rc0-gW-bLx"/>
+                            <constraint firstItem="Geg-vO-1bW" firstAttribute="width" secondItem="vvv-lZ-tYF" secondAttribute="width" multiplier="0.95" id="WJ5-Yk-gKT"/>
+                            <constraint firstItem="uBb-FQ-PmP" firstAttribute="top" secondItem="kRU-bG-1hz" secondAttribute="top" id="Ygb-j6-Iia"/>
+                            <constraint firstItem="kRU-bG-1hz" firstAttribute="leading" secondItem="TWo-cj-KkG" secondAttribute="leading" id="bvw-Vf-lPd"/>
+                            <constraint firstItem="vvv-lZ-tYF" firstAttribute="trailing" secondItem="TWo-cj-KkG" secondAttribute="trailing" id="kia-lW-m8p"/>
+                            <constraint firstItem="vvv-lZ-tYF" firstAttribute="top" secondItem="gur-Kc-pwV" secondAttribute="top" id="r5D-r7-pcU"/>
+                            <constraint firstItem="TWo-cj-KkG" firstAttribute="trailing" secondItem="kRU-bG-1hz" secondAttribute="trailing" id="rHp-l8-KPU"/>
+                            <constraint firstItem="TWo-cj-KkG" firstAttribute="trailing" secondItem="uBb-FQ-PmP" secondAttribute="trailing" id="rgm-Gp-Fr5"/>
+                            <constraint firstItem="Kbn-1G-uOC" firstAttribute="centerX" secondItem="gur-Kc-pwV" secondAttribute="centerX" id="sNx-hr-OLt"/>
+                            <constraint firstItem="Kbn-1G-uOC" firstAttribute="centerY" secondItem="gur-Kc-pwV" secondAttribute="centerY" id="uzl-Qh-0ge"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="nTy-n8-wKO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jeZ-2B-WYp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="268.75" y="-626.3671875"/>
         </scene>
         <!--Quiz View Controller1-->
         <scene sceneID="tXr-a1-R10">
@@ -573,6 +680,7 @@
         <image name="ED" width="1516" height="2150"/>
         <image name="Image" width="24" height="24"/>
         <image name="background" width="1920" height="1080"/>
+        <image name="news10UI.png" width="2304" height="600"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
