--- a/BurachiribuARQuizApp/Base.lproj/LaunchScreen.storyboard
+++ b/BurachiribuARQuizApp/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="ipad10_5" orientation="portrait" layout="fullscreen" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,53 +13,110 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buchou" translatesAutoresizingMaskIntoConstraints="NO" id="lVO-bA-DTQ">
-                                <rect key="frame" x="0.0" y="0.0" width="834" height="474"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="titleImage_iPad" translatesAutoresizingMaskIntoConstraints="NO" id="zmy-sL-zGa">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="lVO-bA-DTQ" secondAttribute="height" multiplier="139:79" id="jF7-fp-DZF"/>
+                                    <constraint firstAttribute="width" constant="1" id="da5-ia-pFq"/>
+                                    <constraint firstAttribute="width" secondItem="zmy-sL-zGa" secondAttribute="height" multiplier="3:4" id="vgZ-TB-8e7"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="da5-ia-pFq"/>
+                                        <exclude reference="vgZ-TB-8e7"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="da5-ia-pFq"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="vgZ-TB-8e7"/>
+                                    </mask>
+                                </variation>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="presents" translatesAutoresizingMaskIntoConstraints="NO" id="Eqx-tY-01x">
-                                <rect key="frame" x="224" y="661" width="386" height="190"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="titleImage_iPhone" translatesAutoresizingMaskIntoConstraints="NO" id="Jy7-a0-2dm">
+                                <rect key="frame" x="0.0" y="-0.33333333333331439" width="428" height="926.33333333333326"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="190" id="79V-hp-PNk"/>
-                                    <constraint firstAttribute="width" constant="386" id="VZD-yL-2A9"/>
+                                    <constraint firstAttribute="width" secondItem="Jy7-a0-2dm" secondAttribute="height" multiplier="207:448" id="uSP-AK-9Kc"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="uSP-AK-9Kc"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="uSP-AK-9Kc"/>
+                                    </mask>
+                                </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jotaro Sugiyama" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vnl-I7-8QQ">
-                                <rect key="frame" x="353" y="945.5" width="128" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="aFh-Zb-Cjk"/>
-                                    <constraint firstAttribute="width" constant="128" id="v6y-HV-JQy"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lVO-bA-DTQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5dC-fT-1HH"/>
-                            <constraint firstItem="Eqx-tY-01x" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="200" id="98P-uH-Nvb"/>
-                            <constraint firstItem="Vnl-I7-8QQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F9k-wE-fuj"/>
-                            <constraint firstItem="lVO-bA-DTQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FBt-sD-Iex"/>
-                            <constraint firstItem="Eqx-tY-01x" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="R42-Lx-5CS"/>
-                            <constraint firstItem="Vnl-I7-8QQ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="400" id="uqw-Gj-kdF"/>
-                            <constraint firstItem="lVO-bA-DTQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uuh-rS-NW5"/>
+                            <constraint firstAttribute="bottom" secondItem="Jy7-a0-2dm" secondAttribute="bottom" id="44E-Gw-XwT"/>
+                            <constraint firstAttribute="bottom" secondItem="zmy-sL-zGa" secondAttribute="bottom" id="6HC-Iz-nfQ"/>
+                            <constraint firstItem="Jy7-a0-2dm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JJm-dD-tRW"/>
+                            <constraint firstItem="Jy7-a0-2dm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Jgk-BD-aj8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zmy-sL-zGa" secondAttribute="bottom" id="QUA-WL-SAB"/>
+                            <constraint firstItem="Jy7-a0-2dm" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="aAz-5l-YLl"/>
+                            <constraint firstItem="zmy-sL-zGa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fbq-EP-LPU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zmy-sL-zGa" secondAttribute="trailing" id="sG0-fL-ysY"/>
+                            <constraint firstAttribute="bottom" secondItem="Jy7-a0-2dm" secondAttribute="bottom" id="tcJ-Kf-tQe"/>
+                            <constraint firstItem="zmy-sL-zGa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="x61-KO-MZf"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="Jy7-a0-2dm"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="44E-Gw-XwT"/>
+                                <exclude reference="JJm-dD-tRW"/>
+                                <exclude reference="Jgk-BD-aj8"/>
+                                <exclude reference="aAz-5l-YLl"/>
+                                <exclude reference="tcJ-Kf-tQe"/>
+                                <exclude reference="QUA-WL-SAB"/>
+                                <exclude reference="sG0-fL-ysY"/>
+                                <exclude reference="6HC-Iz-nfQ"/>
+                                <exclude reference="fbq-EP-LPU"/>
+                                <exclude reference="x61-KO-MZf"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="Jy7-a0-2dm"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="44E-Gw-XwT"/>
+                                <include reference="JJm-dD-tRW"/>
+                                <include reference="Jgk-BD-aj8"/>
+                                <exclude reference="aAz-5l-YLl"/>
+                                <include reference="tcJ-Kf-tQe"/>
+                                <include reference="QUA-WL-SAB"/>
+                                <include reference="sG0-fL-ysY"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="constraints">
+                                <include reference="6HC-Iz-nfQ"/>
+                                <include reference="fbq-EP-LPU"/>
+                                <include reference="x61-KO-MZf"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.517985611510795" y="375"/>
+            <point key="canvasLocation" x="51.86915887850467" y="374.51403887688986"/>
         </scene>
     </scenes>
     <resources>
-        <image name="buchou" width="1920" height="1080"/>
-        <image name="presents" width="915" height="430"/>
+        <image name="titleImage_iPad" width="2048" height="2732"/>
+        <image name="titleImage_iPhone" width="1242" height="2688"/>
     </resources>
 </document>
