--- a/BurachiribuARQuizApp/Base.lproj/Main.storyboard
+++ b/BurachiribuARQuizApp/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="choiceAnswerWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="kY4-sP-5fv"/>
+                                            <action selector="tappedChoiceButtonWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="qj1-vz-0RC"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OET-IT-wpl">
@@ -132,7 +132,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="choiceAnswerWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="A3Z-GO-pzf"/>
+                                            <action selector="tappedChoiceButtonWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="edM-Ro-Y2V"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Scr-tU-Sva">
@@ -142,7 +142,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="choiceAnswerWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="mvG-cZ-tFQ"/>
+                                            <action selector="tappedChoiceButtonWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="EHX-g6-epe"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iBL-YX-jdw">
@@ -152,7 +152,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <action selector="choiceAnswerWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="oh0-Yc-nNO"/>
+                                            <action selector="tappedChoiceButtonWithSender:" destination="AD7-zb-4XL" eventType="touchUpInside" id="6R2-BU-scP"/>
                                         </connections>
                                     </button>
                                 </subviews>
